--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   </head>
   <body>
     <h2>In the console</h2>
-    <!-- <script src="task-1.js" type="module"></script> -->
+    <script src="task-1.js" type="module"></script>
     <script src="task-2.js" type="module"></script>
-    <!-- <script src="task-3.js" type="module"></script> -->
+    <script src="task-3.js" type="module"></script>
   </body>
 </html>
